# sdop-0.61

./: AUTHORS  ChangeLog  INSTALL  LICENCE  Makefile.in  NEWS  README  configure  configure.ac
doc/: sdop.1  sdop.xfpt  sdop.xml
share/: HyphenData  PSheader  arttemplate  foottable  foottable-t  headtable-p  indexcollate  titletemplate  toctemplate
share/fontmetrics/: Courier-Bold.afm  Courier-BoldOblique.afm  Courier-Oblique.afm  Courier.afm  Helvetica-Bold.afm  Helvetica-BoldOblique.afm  Helvetica-Oblique.afm  Helvetica.afm  LICENCE  Times-Bold.afm  Times-BoldItalic.afm  Times-Italic.afm  Times-Roman.afm
src/: Makefile  book.c  buildhy.c  datatables.c  debug.c  entity.c  error.c  font.c  footnote.c  functions.h  globals.c  globals.h  hyphen.c  hyphen.h  hyphenlist  hytest.c  index.c  jpeg.c  misc.c  mytypes.h  number.c  object.c  page.c  para.c  pin.c  png.c  preface.c  read.c  ref.c  revision.c  sdop.c  sdop.h  structs.h  sys.c  table.c  toc.c  tree.c  ucd.c  ucp.h  url.c  (+2 more)
testing/: runtest
testing/fontmetrics/: PMW-Music.afm
testing/infiles/: 01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  17  18  19  19.ps  20  21  22  24  24.opt  25.opt  26  26.opt  27.opt  28  29  30  31  32  33  34  35  36  37  38  39  (+22 more)
testing/outfiles/: 01  02  02.err  03  04  04.err  05  06  07  07.err  08  09  10  11  12  13  14  15  16  17  18  19  19.err  20  21  22  22.err  23  24  25  26  27  28  29  30  31  32  33  34  35  (+25 more)
